--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "BCL Bot",
+  "name": "Leaguehallabot",
   "version": "1.0.0",
-  "description": "Bot For BCL Server",
+  "description": "Bot For LH Server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
