--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 {
-    "Token": "NTQ4ODM0NzA5MTg3MDY3OTA0.XNAh7Q.k0CYWik2Oh2ihQuVB4uxAJYQ_N8",
+    "Token": "NTc1MDIxODM1NTAzMDA5Nzky.XNB5DA.l9rV7wzaZWqGHm1gweXuICXLQvo",
 
     "Prefix": "-"
 }
